# csci343

./: .gitignore
C343-Assignment1/: CMakeLists.txt
C343-Assignment1/.github/workflows/: build_cmake.yml
C343-Assignment1/src/Sequence/: Sequence.cpp  Sequence.h
C343-Assignment1/test/: CMakeLists.txt
C343-Assignment1/test/Sequence/: add.cpp  clear.cpp  entry.cpp  length.cpp  operator.cpp  outputSequence.cpp  remove.cpp  transferFrom.cpp
Kelvin Ohaya - C343 Assignment2/: CMakeLists.txt  ExampleFileReader.cpp
Kelvin Ohaya - C343 Assignment2/EmployeeRecordShortVersion/: EmployeeRecord.h  ExampleFileReader.cpp
Kelvin Ohaya - C343 Assignment2/EmployeeRecordShortVersion/EmployeeSampleData/: EmployeeData.txt
Kelvin Ohaya - C343-Assignment1/: .gitignore  README.md
Kelvin Ohaya - C343-Assignment1/src/: CMakeLists.txt  main.cpp
Kelvin Ohaya - C343-Assignment1/src/Sequence/: CMakeLists.txt  Sequence.cpp  Sequence.h
Kelvin Ohaya - C343-Assignment1/test/Sequence/: entry.cpp  outputSequence.cpp  transferFrom.cpp
Kelvin Ohaya - C343Assignment4/: CMakeLists.txt  build_and_run.sh  main.cpp
Kelvin Ohaya - C343Assignment4/Sequence/: Sequence.h
Kelvin Ohaya - C343Assignment4/spellChecker/: spellChecker  spellChecker.cpp
Kelvin Ohaya - C343Assignment4/txtFiles/: oliverSample.txt
Kelvin Ohaya - C343Assignment4/utils/: utils.cpp  utils.h
assignment0/: CMakeLists.txt  SqrMatrix.cpp  SqrMatrix.h  howToRun.txt  main.cpp
